--- a/products.html
+++ b/products.html
@@ -30,7 +30,176 @@
     </header>
     <main>
        <!--- <img src ="img/back.png"> -->
-       
+       <div id="productscontainer">
+            <div class="productsrow">
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="/productview.html"><img src="img/products/products1.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="/productview.html"><img src="img/products/products2.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="/productview.html"><img src="img/products/products3.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products4.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="productsrow">
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products1.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products2.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products3.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products4.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="productsrow">
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products1.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products2.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products3.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products4.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="productsrow">
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products1.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products2.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products3.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+                <div class="productsblock">
+                    <div class="productsimgbox">
+                        <a href="productview.html"><img src="img/products/products4.jpg"></a>
+                    </div>
+                    <div class="productsdata">
+                        <p>Title</p>
+                        <p>Price</p>
+
+                    </div>
+                </div>
+            </div>  
+       </div>
        
     </main>
    
