--- a/products.html
+++ b/products.html
@@ -37,8 +37,8 @@
                         <a href="/productview.html"><img src="img/products/products1.jpg"></a>
                     </div>
                     <div class="productsdata">
-                        <p>Title</p>
-                        <p>Price</p>
+                        <p>Casual Half Sleeve Solid Women Black Top</p>
+                        <p class="productsprice">Price</p>
 
                     </div>
                 </div>
