--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <li><a href="products.html">PRODUCTS</a></li>
                 <li>ACCOUNT</li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li>CHECKOUT</li>
+                <li><a href="checkout.html">CHECKOUT</a></li>
             </ul>
         </nav>
     </header>
